add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(CFGuard)
add_subdirectory(AtomicRMW)
add_subdirectory(AtomicRMWPass)
add_subdirectory(Mutex)
add_subdirectory(CompareExchange)
add_subdirectory(CondWait)
add_subdirectory(Fence)
add_subdirectory(Load)
add_subdirectory(PosixCondSignal)
add_subdirectory(PosixCondWait)
add_subdirectory(FindLockUnlockPairs)
